More source cleanup - adds or fixes the header, drops unused parameters, removes duplicate modifiers, replace tabs with 4 spaces, etc.
git-svn-id: http://jmonkeyengine.googlecode.com/svn/trunk@3962 75d07b2b-3a1a-0410-a2c5-0572b91ccdca